Fri Jan  5 22:36:24 CST 2001 Adam Heath <doogie@debian.org>

  * main/main.c, lib/dbmodify.c, main/dpkg.8: Add a --status-pipe.

Fri Jan  5 22:25:06 CST 2001 Adam Heath <doogie@debian.org>

  * lib/varbuf.c: varbuf(v)printf now return the number of characters
    they added to the buffer.

Thu Jan  4 01:20:27 CST 2001 Adam Heath <doogie@debian.org>

  * dpkg-deb/build.c, dpkg-deb/extract.c, dpkg-deb/info.c,
    include/dpkg.h.in, lib/mlib.c, main/archives.c, main/enquiry.c,
    main/help.c main/processarc.c: Add 'warn' parameter to waitsubproc
    and checksubprocerr, and also add a return value.  This fixes my
    last checkin, where maintainer_script_alternative would run
    both the old and new script.

Thu Jan 04 05:19:37 CET 2001 peter karlsson <peterk@debian.org>

  * po/sv.po: Updated Swedish translation.

Wed Jan  3 10:35:49 CET 2001 Wichert Akkerman <wakkerma@debian.org>

  * configure.in: add doc/fr/Makefile

Tue Jan  2 22:44:14 CST 2001 Adam Heath <doogie@debian.org>

  * lib/help.c: Removed an 'inlined' version of waitsubproc, and call
    the function instead.

Mon Jan  1 02:07:47 CST 2001 Adam Heath <doogie@debian.org>

  * lib/varbuf.c, include/dpkg-db.h: Add varbufdupc().

Mon Jan  1 02:04:26 CST 2001 Adam Heath <doogie@debian.org>

  * lib/parse.c: Use of PKGIOFF macro was checked in prematurely.

Sat Dec 30 23:08:00 CET 2000 Wichert Akkerman <wakkerma@debian.org>

  * doc/Makefile.in: add fr to SUBDIRS
  * doc/fr: new directory with French manpages
  * THANKS: add philippe batailler who translated the manpages to French

Sat Dec 30 20:38:20 CST 2000 Adam Heath <doogie@debian.org>
  
  * utils/start-stop-daemon.c: --name is now allowed on the command
    line.

Fri Dec 29 12:39:09 CST 2000 Adam Heath <doogie@debian.org>

  * lib/parse.c: Properly parse control files that only have one
    paragraph, which means no double ending new line.

Thu Dec 28 18:43:37 CST 2000 Adam Heath <doogie@debian.org>
