@@ -1,3 +1,7 @@
+Sun Jan  7 14:27:57 CST 2001 Adam Heath <doogie@debian.org>
+
+  * include/dpkg-db.h:  Forgot the status-pipe struct.
+
 Fri Jan  5 22:36:24 CST 2001 Adam Heath <doogie@debian.org>
 
   * main/main.c, lib/dbmodify.c, main/dpkg.8: Add a --status-pipe.
